@@ -1,31 +1,23 @@
 package dev.langchain4j.model.googleai;
 
-import com.google.gson.Gson;
-import dev.langchain4j.agent.tool.ToolExecutionRequest;
-import dev.langchain4j.agent.tool.ToolSpecification;
-
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
+import static dev.langchain4j.internal.Utils.isNullOrEmpty;
+import static dev.langchain4j.model.googleai.Json.toJsonWithoutIndent;
 import static dev.langchain4j.model.googleai.SchemaMapper.fromJsonSchemaToGSchema;
 
+import dev.langchain4j.agent.tool.ToolExecutionRequest;
+import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionCall;
+import dev.langchain4j.model.googleai.GeminiGenerateContentRequest.GeminiTool;
+import dev.langchain4j.model.googleai.GeminiGenerateContentRequest.GeminiTool.GeminiCodeExecution;
+import java.util.List;
+import java.util.Objects;
+
 class FunctionMapper {
-
-    private static final Gson GSON = new Gson();
-
     static GeminiTool fromToolSepcsToGTool(List<ToolSpecification> specifications, boolean allowCodeExecution) {
-
-        GeminiTool.GeminiToolBuilder tool = GeminiTool.builder();
-
-        if (allowCodeExecution) {
-            tool.codeExecution(new GeminiCodeExecution());
-        }
-
-        if (specifications == null || specifications.isEmpty()) {
+        if (isNullOrEmpty(specifications)) {
             if (allowCodeExecution) {
                 // if there's no tool specification, but there's Python code execution
-                return tool.build();
+                return new GeminiTool(null, new GeminiCodeExecution());
             } else {
                 // if there's neither tool specification nor Python code execution
                 return null;
@@ -33,10 +25,9 @@ class FunctionMapper {
         }
 
         List<GeminiFunctionDeclaration> functionDeclarations = specifications.stream()
-            .map(specification -> {
-                GeminiFunctionDeclaration.GeminiFunctionDeclarationBuilder fnBuilder =
-                    GeminiFunctionDeclaration.builder()
-                            .name(specification.name());
+                .map(specification -> {
+                    GeminiFunctionDeclaration.Builder fnBuilder =
+                            GeminiFunctionDeclaration.builder().name(specification.name());
 
                     if (specification.description() != null) {
                         fnBuilder.description(specification.description());
@@ -46,24 +37,22 @@ class FunctionMapper {
                         fnBuilder.parameters(fromJsonSchemaToGSchema(specification.parameters()));
                     }
 
-                return fnBuilder.build();
-            })
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+                    return fnBuilder.build();
+                })
+                .filter(Objects::nonNull)
+                .toList();
 
-        if (!functionDeclarations.isEmpty()) {
-            tool.functionDeclarations(functionDeclarations);
-        }
-
-        return tool.build();
+        return new GeminiTool(
+                functionDeclarations.isEmpty() ? null : functionDeclarations,
+                allowCodeExecution ? new GeminiCodeExecution() : null);
     }
 
-    static List<ToolExecutionRequest> fromToolExecReqToGFunCall(List<GeminiFunctionCall> functionCalls) {
+    static List<ToolExecutionRequest> toToolExecutionRequests(List<GeminiFunctionCall> functionCalls) {
         return functionCalls.stream()
-            .map(functionCall -> ToolExecutionRequest.builder()
-                .name(functionCall.getName())
-                .arguments(GSON.toJson(functionCall.getArgs()))
-                .build())
-            .collect(Collectors.toList());
+                .map(functionCall -> ToolExecutionRequest.builder()
+                        .name(functionCall.name())
+                        .arguments(toJsonWithoutIndent(functionCall.args()))
+                        .build())
+                .toList();
     }
 }
